					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/11/11
	* Rev. 14459 Updated known EXP values, and deleted exp2.txt. [L0ne_W0lf]
2010/11/10
	* Rev. 14458 Added some items with enforced delays to the item_delay_db! [L0ne_W0lf]
2010/11/04
	* Rev. 14445 Updated monster database. Most spawning monsters stats are now updated. [L0ne_W0lf]
	- 'Ghost' mobs, and event monsters are not updated at this time.
	- Information collected from RODE by Gepard.
	* Added demonstrative mob_penalty_db. (unused.)
2010/11/02
	* Fixed incorrect status change constants being used in cash food scripts. (bugreport:4477) [Paradox924X]
2010/10/23
	* Rev. 14435 Updated stats for monsters that spawn on Geffen Fields. [L0ne_W0lf]
	* Packet_db now uses packet_db_ver set to default
2010/10/20
	* Rev. 14433 Updated stats for monsters that spawn on Prontera Fields. [L0ne_W0lf]
2010/10/11
	* Updated cash items to use new cash food statuses. [Paradox924X]
2010/10/05
	* Rev. 14412 Handfull of misc changes. [L0ne_W0lf]
	- Added two additional mercenaries and updated data.
	- Added place holder values to the item database.
	- Added packets for the party booking system.
	- Updated the 13.2 monster skills to official.
	- Updated stats and drop rates on several monsters.
	- Fixed Lullaby working on allies/party members.
2010/09/18
	* Rev. 14409 Lots of small minor updates. :P [L0ne_W0lf]
	* Lots of updates to monster stats/drops, all fairly minor.
	* Updated the price and weight of a handful of etc items.
	* Removed drops for quest-spawned Satan Morroc. (bugreport:4425)
	* Changed weight on novice consumable items to 0 (bugreport:4442)
2010/09/16