@@ -1517,3 +1517,28 @@
 12345,91,100	// Luciola's_Honey_Jam
 12348,91,100	// Manuk's_Faith
 12349,91,100	// Cornus'_Tears
+
+// Epidode 13.3
+1192,123,100	// P_Slayer1
+1193,123,100	// P_Slayer2
+1650,123,100	// P_Staff1
+1651,123,100	// P_Staff2
+1747,123,100	// P_Bow1
+1748,123,100	// P_Bow2
+2456,123,100	// Para_Team_Boots1
+2457,123,100	// Para_Team_Boots2
+2458,123,100	// Para_Team_Boots3
+2560,123,100	// Para_Team_Manteau
+5583,123,100	// Para_Team_Hat
+6219,123,100	// Para_Team_Mark
+13050,123,100	// P_Dagger1
+13051,123,100	// P_Dagger2
+13112,123,100	// P_Revolver1
+13113,123,100	// P_Revolver2
+13423,123,100	// P_Sabre1
+13424,123,100	// P_Sabre2
+15009,123,100	// Para_Team_Uniform1
+15010,123,100	// Para_Team_Uniform2
+15011,123,100	// Para_Team_Uniform3
+16004,123,100	// P_Mace1
+16005,123,100	// P_Mace2
